feat: add swagger for groups
