# model.go
@@ -10,13 +10,25 @@ type DBGroup struct {
 	Configs map[string]*DBConfig `json:"configs"`
 }
 
+// FreeGroup swagger: model FreeGroup
 type FreeGroup struct {
-	Id      string                  `json:"id"`
-	Version string                  `json:"version"`
+	// Id of the group
+	// in: string
+	Id string `json:"id"`
+
+	// Version of the group
+	// in: string
+	Version string `json:"version"`
+
+	// Entries map of configs
+	// in: map[string]*GroupConfig
 	Configs map[string]*GroupConfig `json:"configs"`
 }
 
+// GroupConfigList swagger: model GroupConfigList
 type GroupConfigList struct {
+	// Entries map of configs
+	// in: map[string]*GroupConfig
 	Configs map[string]*GroupConfig `json:"configs,string"`
 }
 
@@ -35,8 +47,17 @@ type FreeConfig struct {
 	Entries map[string]*string `json:"entries"`
 }
 
+// GroupConfig swagger: model GroupConfig
 type GroupConfig struct {
-	Id      string             `json:"id"`
-	Labels  map[string]*string `json:"labels"`
+	// Id of the config
+	// in: string
+	Id string `json:"id"`
+
+	// Labels of the config
+	// in: map[string]*string
+	Labels map[string]*string `json:"labels"`
+
+	// Entries of the config
+	// in: map[string]*string
 	Entries map[string]*string `json:"entries"`
 }
